fixed margin on mobile mode

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -431,6 +431,8 @@ footer {
     margin-top: 20px;
     font-size: 12px;
     color: #f2f2f2;
+    margin: auto;
+    width: 85%;
 }
 
 .im-eluney {
@@ -688,16 +690,11 @@ input[type="radio"]:checked + .radio-label{
     .carousel {
         height: 200px;
         margin-bottom: 60px;
-        margin-top: 60px;
     }
 
     .small-text {
         font-size: 10px;
         letter-spacing: 1px;
-    }
-
-    .section-title {
-        margin-bottom: 25px;
     }
 
     .logo-container {
@@ -748,8 +745,9 @@ input[type="radio"]:checked + .radio-label{
     }
 
     .container-sessions {
-        margin-bottom: 100px;
+        margin-bottom: 50px;
         display: block;
+        margin-top: 20px;
         margin-left: 20px;
         margin-right: 20px;
     }
@@ -766,9 +764,10 @@ input[type="radio"]:checked + .radio-label{
     }
 
     .section-title {
-        width: 100%;
+        width: 90%;
         font-size: 35px;
         margin-top: 20px;
+        margin-bottom: 25px;
     }
 
     .text-info-card {
@@ -815,7 +814,7 @@ input[type="radio"]:checked + .radio-label{
 
     .card {
         box-shadow: none;
-        margin-top: 30px;
+        margin-top: 25px;
         width: 100%;
         background-color: transparent;
     }
@@ -857,6 +856,7 @@ input[type="radio"]:checked + .radio-label{
     }
 
     .about-text {
+        width: 90%;
         color: #24303d;
         margin-left: auto;
         margin-right: auto;
@@ -929,7 +929,7 @@ input[type="radio"]:checked + .radio-label{
 
     .eluney-img {
         width: 120px;
-        margin-top: 20px;
+        margin-top: 5px;
     }
 
     .container-img > img {
